added v1 conversion api calls

--- a/style.css
+++ b/style.css
@@ -18,6 +18,19 @@
     font-weight: 100;
     padding-top: 3px;
 }
+
+.rate-box {
+    background-color: silver;
+    color: black;
+    width: 25px;
+    height: 45px;
+    border: 1px solid gray;
+    text-align: center;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 100;
+    padding-top: 3px;
+}
 .calc-btn:hover {
     background-color: orange;
 }
@@ -25,7 +38,7 @@
 .row{
     display: table;
     table-layout: fixed;
-    width: 200px;
+    width: 300px;
 }
 .column{
     display: table-cell;
